--- a/Course/Section-7/web-server/templates/views/about.hbs
+++ b/Course/Section-7/web-server/templates/views/about.hbs
@@ -10,9 +10,10 @@
 
 <body>
     
-    <h1>{{title}}</h1>
-    <p>{{helpMessage}}</p>
+    {{>header}}
+    <img src="/img/robot.png">
     
+    {{>footer}}
 </body>
 
 </html>
