--- a/Course/Section-7/web-server/templates/views/help.hbs
+++ b/Course/Section-7/web-server/templates/views/help.hbs
@@ -9,10 +9,11 @@
 </head>
 
 <body>
+    {{>header}}
     
-    <h1>{{title}}</h1>
-    <img src="/img/robot.png">
+    <p>{{helpMessage}}</p>
     
+    {{>footer}}
 </body>
 
 </html>
