--- a/Course/Section-7/web-server/templates/views/404.hbs
+++ b/Course/Section-7/web-server/templates/views/404.hbs
@@ -3,15 +3,18 @@
 <html>
     <head>
         <title>Weather App</title>
+        <link rel="icon" href="/img/weather.png">
         <meta charset="UTF-8">
         <link rel='stylesheet' href="/css/styles.css">
     </head>
 
     <body>
-        {{>header}}
+        <div class="main-content">
+            {{>header}}
         
-        <p>{{errorMessage}}</p>
-
+            <p>{{errorMessage}}</p>
+        </div>
+        
         {{>footer}}
     </body>
 </html>
