--- a/Course/Section-7/web-server/templates/views/help.hbs
+++ b/Course/Section-7/web-server/templates/views/help.hbs
@@ -2,17 +2,20 @@
 <html lang="en">
 
 <head>
+    <title>Weather App</title>
+    <link rel="icon" href="/img/weather.png">
+    <link rel="stylesheet" href="/css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
-    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
-    {{>header}}
+    <div class="main-content">
+        {{>header}}
     
-    <p>{{helpMessage}}</p>
-    
+        <p>{{helpMessage}}</p>
+    </div>
+
     {{>footer}}
 </body>
 
