--- a/Course/Section-7/web-server/templates/views/index.hbs
+++ b/Course/Section-7/web-server/templates/views/index.hbs
@@ -3,11 +3,17 @@
 
 <head>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="/img/weather.png">
     <script src="/js/app.js"></script>
 </head>
 
 <body>
-    {{>header}}
+    <div class="main-content">
+        {{>header}}
+
+        <p>Use this site to get your weather!</p>
+    </div>
+    
     {{>footer}}
 </body>
 
