--- a/Course/section-8/web-server/templates/views/index.hbs
+++ b/Course/section-8/web-server/templates/views/index.hbs
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" href="/img/weather.png">
-    <script src="/js/app.js"></script>
+    
 </head>
 
 <body>
@@ -14,7 +14,13 @@
         <p>Use this site to get your weather!</p>
     </div>
     
+    <form action="">
+        <input placeholder="Location">
+        <button>Search</button>
+    </form>
+
     {{>footer}}
+    <script src="/js/app.js"></script>
 </body>
 
 </html>
