--- a/Course/section-8/web-server/templates/views/index.hbs
+++ b/Course/section-8/web-server/templates/views/index.hbs
@@ -4,23 +4,31 @@
 <head>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" href="/img/weather.png">
-    
+
 </head>
 
 <body>
+
     <div class="main-content">
         {{>header}}
 
         <p>Use this site to get your weather!</p>
+
+
+        <form action="">
+            <input placeholder="Location">
+            <button>Search</button>
+        </form>
+
     </div>
-    
-    <form action="">
-        <input placeholder="Location">
-        <button>Search</button>
-    </form>
+
+
+    <p id="message-1"></p>
+    <p id="message-2"></p>
 
     {{>footer}}
     <script src="/js/app.js"></script>
+
 </body>
 
 </html>
